--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,3 +10,4 @@ phases:
       - echo $CODEBUILD_SOURCE_VERSION
       - echo $CODEBUILD_SOURCE_REPO_URL
       - git branch --contains
+      - echo TEST2
